[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/fonts/data/TheJewishBitmap/PixelFJVerdana12pt.ttf" type="FontFile" id=1]
[ext_resource path="res://game/customizer_buttons_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/data/TheJewishBitmap/TheJewishBitmap.ttf" type="FontFile" id=4]
[ext_resource path="res://assets/fonts/non_caps_general.tres" type="FontFile" id=5]
[ext_resource path="res://assets/images/ui/menu/x_button_black_bordered.png" type="Texture2D" id=6]
[ext_resource path="res://assets/images/ui/menu/x_button_grey.png" type="Texture2D" id=8]
[ext_resource path="res://assets/images/ui/menu/x_button_black.png" type="Texture2D" id=9]
[ext_resource path="res://game/ui/customizer/LoadScreen.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="FontFile" id=45]
size = 30
spacing_top = 1
spacing_bottom = -6
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=46]
size = 25
spacing_top = 1
spacing_bottom = -6
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=40]
size = 12
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=41]
content_margin_left = 8.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="FontFile" id=42]
size = 25
spacing_top = 1
spacing_bottom = -6
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 4 )

[node name="LoadScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
script = ExtResource( 10 )

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1000.0
offset_bottom = 600.0
custom_styles/panel = SubResource( 28 )

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_left = 18.0
offset_top = 59.0
offset_right = 543.0
offset_bottom = 509.0
custom_styles/panel = SubResource( 39 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer2"]
offset_left = 2.0
offset_top = 2.0
offset_right = 523.0
offset_bottom = 448.0
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="DesignContainer" type="VBoxContainer" parent="PanelContainer2/ScrollContainer"]
offset_right = 500.0
custom_minimum_size = Vector2( 500, 0 )

[node name="PanelContainer4" type="PanelContainer" parent="."]
offset_left = 553.0
offset_top = 59.0
offset_right = 990.0
offset_bottom = 509.0
custom_styles/panel = SubResource( 39 )

[node name="PanelContainer3" type="PanelContainer" parent="."]
offset_left = 560.0
offset_top = 59.0
offset_right = 978.0
offset_bottom = 509.0
custom_styles/panel = SubResource( 43 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer3"]
offset_right = 425.0
offset_bottom = 450.0
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer3/ScrollContainer"]
offset_right = 415.0
offset_bottom = 955.0
custom_minimum_size = Vector2( 415, 0 )

[node name="Blank" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_right = 415.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Head" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 24.0
offset_right = 415.0
offset_bottom = 50.0
custom_fonts/font = SubResource( 45 )
text = "Head"

[node name="ColorRect" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 415.0
offset_bottom = 56.0
custom_minimum_size = Vector2( 0, 2 )

[node name="HeadName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 415.0
offset_bottom = 81.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank2" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 85.0
offset_right = 415.0
offset_bottom = 105.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Core" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 109.0
offset_right = 415.0
offset_bottom = 135.0
custom_fonts/font = SubResource( 45 )
text = "Core"

[node name="ColorRect2" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 139.0
offset_right = 415.0
offset_bottom = 141.0
custom_minimum_size = Vector2( 0, 2 )

[node name="CoreName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 145.0
offset_right = 415.0
offset_bottom = 166.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank12" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 170.0
offset_right = 415.0
offset_bottom = 190.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Shoulders" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 194.0
offset_right = 415.0
offset_bottom = 220.0
custom_fonts/font = SubResource( 45 )
text = "Shoulders"

[node name="ColorRect11" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 224.0
offset_right = 415.0
offset_bottom = 226.0
custom_minimum_size = Vector2( 0, 2 )

[node name="ShouldersName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 230.0
offset_right = 415.0
offset_bottom = 251.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank3" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 255.0
offset_right = 415.0
offset_bottom = 275.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Chassis" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 279.0
offset_right = 415.0
offset_bottom = 305.0
custom_fonts/font = SubResource( 45 )
text = "Chassis"

[node name="ColorRect3" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 309.0
offset_right = 415.0
offset_bottom = 311.0
custom_minimum_size = Vector2( 0, 2 )

[node name="ChassisName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 315.0
offset_right = 415.0
offset_bottom = 336.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank4" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 340.0
offset_right = 415.0
offset_bottom = 360.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Generator" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 364.0
offset_right = 415.0
offset_bottom = 390.0
custom_fonts/font = SubResource( 45 )
text = "Generator"

[node name="ColorRect4" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 394.0
offset_right = 415.0
offset_bottom = 396.0
custom_minimum_size = Vector2( 0, 2 )

[node name="GeneratorName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 400.0
offset_right = 415.0
offset_bottom = 421.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank5" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 425.0
offset_right = 415.0
offset_bottom = 445.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Chipset" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 449.0
offset_right = 415.0
offset_bottom = 475.0
custom_fonts/font = SubResource( 45 )
text = "Chipset"

[node name="ColorRect5" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 479.0
offset_right = 415.0
offset_bottom = 481.0
custom_minimum_size = Vector2( 0, 2 )

[node name="ChipsetName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 485.0
offset_right = 415.0
offset_bottom = 506.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank6" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 510.0
offset_right = 415.0
offset_bottom = 530.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="Thrusters" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 534.0
offset_right = 415.0
offset_bottom = 560.0
custom_fonts/font = SubResource( 45 )
text = "Thrusters"

[node name="ColorRect6" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 564.0
offset_right = 415.0
offset_bottom = 566.0
custom_minimum_size = Vector2( 0, 2 )

[node name="ThrusterName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 570.0
offset_right = 415.0
offset_bottom = 591.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank7" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 595.0
offset_right = 415.0
offset_bottom = 615.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="RightArm" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 619.0
offset_right = 415.0
offset_bottom = 645.0
custom_fonts/font = SubResource( 45 )
text = "Right Arm"

[node name="ColorRect7" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 649.0
offset_right = 415.0
offset_bottom = 651.0
custom_minimum_size = Vector2( 0, 2 )

[node name="RightArmName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 655.0
offset_right = 415.0
offset_bottom = 676.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank8" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 680.0
offset_right = 415.0
offset_bottom = 700.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="LeftArm" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 704.0
offset_right = 415.0
offset_bottom = 730.0
custom_fonts/font = SubResource( 45 )
text = "Left Arm"

[node name="ColorRect8" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 734.0
offset_right = 415.0
offset_bottom = 736.0
custom_minimum_size = Vector2( 0, 2 )

[node name="LeftArmName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 740.0
offset_right = 415.0
offset_bottom = 761.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank9" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 765.0
offset_right = 415.0
offset_bottom = 785.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="RightShoulder" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 789.0
offset_right = 415.0
offset_bottom = 815.0
custom_fonts/font = SubResource( 45 )
text = "Right Shoulder"

[node name="ColorRect9" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 819.0
offset_right = 415.0
offset_bottom = 821.0
custom_minimum_size = Vector2( 0, 2 )

[node name="RightShoulderName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 825.0
offset_right = 415.0
offset_bottom = 846.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank10" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 850.0
offset_right = 415.0
offset_bottom = 870.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="LeftShoulder" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 874.0
offset_right = 415.0
offset_bottom = 900.0
custom_fonts/font = SubResource( 45 )
text = "Left Shoulder"

[node name="ColorRect10" type="ColorRect" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 904.0
offset_right = 415.0
offset_bottom = 906.0
custom_minimum_size = Vector2( 0, 2 )

[node name="LeftShoulderName" type="Label" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 910.0
offset_right = 415.0
offset_bottom = 931.0
custom_fonts/font = ExtResource( 5 )

[node name="Blank11" type="Panel" parent="PanelContainer3/ScrollContainer/VBoxContainer"]
offset_top = 935.0
offset_right = 415.0
offset_bottom = 955.0
custom_minimum_size = Vector2( 0, 20 )
custom_styles/panel = SubResource( 44 )

[node name="topbar" type="ColorRect" parent="."]
offset_left = 7.0
offset_top = 8.0
offset_right = 993.0
offset_bottom = 38.0

[node name="exit" type="TextureButton" parent="topbar"]
offset_left = 956.0
offset_right = 986.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 30 )
focus_mode = 0
focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="topbar"]
offset_left = 5.0
offset_top = 4.0
offset_right = 409.0
offset_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 46 )
text = "sav_hunteros.exe -builddata"

[node name="DesignNameEntry" type="LineEdit" parent="."]
offset_left = 18.0
offset_top = 514.0
offset_right = 404.0
offset_bottom = 548.0
custom_fonts/font = SubResource( 40 )
custom_styles/normal = SubResource( 41 )
context_menu_enabled = false
middle_mouse_paste_enabled = false
placeholder_text = "Build Name"

[node name="SaveButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 557.0
offset_right = 146.0
offset_bottom = 587.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 42 )
text = "Save"
align = 0

[node name="SaveSuccessful" type="Label" parent="."]
visible = false
offset_left = 552.0
offset_top = 520.0
offset_right = 956.0
offset_bottom = 541.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 46 )
text = "SAVE SUCCESSFUL."

[node name="RenameButton" type="Button" parent="."]
offset_left = 415.0
offset_top = 516.0
offset_right = 541.0
offset_bottom = 546.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 42 )
disabled = true
text = "Rename"
align = 0

[node name="LoadButton" type="Button" parent="."]
offset_left = 162.0
offset_top = 557.0
offset_right = 288.0
offset_bottom = 587.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 42 )
disabled = true
text = "Load"
align = 0

[node name="RefreshButton" type="Button" parent="."]
offset_left = 861.0
offset_top = 557.0
offset_right = 987.0
offset_bottom = 587.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 42 )
text = "REFRESH"
align = 0

[connection signal="pressed" from="topbar/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_RefreshButton_pressed"]
